FIX button label text overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ body {
     width: 100px;
     height: 100px;
     font-size: 3.2rem;
-    margin: 0 30px;
+    margin: 20px 30px;
     transition: all 0.5s;
 }
 
@@ -184,7 +184,7 @@ body {
     }
 
     .btn--big {
-        margin: 0 10px;
+        margin: 10px 10px;
         padding: 5px;
         border: 5px solid;
         width: 50px;
